Cmbios para multiplicar por 4 los resultados

--- a/AkademicReport.csproj
+++ b/AkademicReport.csproj
@@ -21,4 +21,7 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	</PropertyGroup>
 </Project>
