the last changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,3 +13,4 @@
 }
 
 //Scaffold-DbContext "Name=ConnectionStrings:Sql" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -ContextDir Data -Context  DataContext  -force
+  //Scaffold-DbContext "Server=172.25.0.55; Database=AkademicReports; User Id=sa; Password=Sa1234; Trusted_Connection=false; Encrypt=false;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -ContextDir Data -Context  DataContext  -force
